Global Actions with Advanced Reboot [3/3]
Change-Id: I601b4fb4a25e528767bcad7861446c2e8cdd377d
[jaysonedson@gmail.com: Change setting for lockdown]
Signed-off-by: Jason Edson <jaysonedson@gmail.com>
Signed-off-by: DennySPb <dennyspb@gmail.com>
Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>

--- a/res/values/weeb_strings.xml
+++ b/res/values/weeb_strings.xml
@@ -6,6 +6,9 @@
     <string name="weeb_settings_dash_title">WeebsX `ウィーブス</string>
     <string name="weeb_settings_summary">moar onichan featuress</string>
 
+    <!-- Advanced powermenu -->
+    <string name="global_actions_title">Power menu</string>
+
     <!-- Device Codename -->
     <string name="about_device_name">Device `デバイス</string>
 
