--- a/res/values/weeb_strings.xml
+++ b/res/values/weeb_strings.xml
@@ -28,6 +28,9 @@
     <!-- Weeb version -->
     <string name="weeb_version">WeebProjekt ver `バージョン</string>
 
+    <!-- Screenshot sound -->
+    <string name="screenshot_sound_title">Screenshot sound</string>
+
      <!-- Notch: Full screen apps -->
     <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
     <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
