Settings: Add platform and RAM to Model & Hardware
This seems kinda empty... Fill it with fun stuff

Change-Id: Ia43cb31b7567bed07f2b8a1d8637de4e66320c90
[ mydongistiny: Move to new HardwareInfo ]
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Saikiran <bjsaikiran@gmail.com>
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/weeb_strings.xml
+++ b/res/values/weeb_strings.xml
@@ -12,6 +12,8 @@
     <!-- Hardware Information -->
     <string name="hardware_information">Hardware information</string>
     <string name="hardware_information_summary">Information about hardware</string>
+    <string name="platform_revision">Platform</string>
+    <string name="total_ram">RAM</string>
 
     <!-- SELinux status -->
     <string name="selinux_status">SELinux status</string>
