--- a/res/values/custom_config.xml
+++ b/res/values/custom_config.xml
@@ -24,4 +24,6 @@
     -->
     <integer name="config_fingerprintSensorLocation">0</integer>
 
+    <!-- Density category -->
+    <string name="density_category">Density options</string>
 </resources>
