--- a/res/values/weeb_strings.xml
+++ b/res/values/weeb_strings.xml
@@ -25,7 +25,10 @@
     <string name="selinux_status_permissive">Permissive</string>
     <string name="selinux_status_enforcing">Enforcing</string>
 
-    <!-- Streak version -->
+    <!-- Weeb version -->
     <string name="weeb_version">WeebProjekt ver `バージョン</string>
 
+     <!-- Notch: Full screen apps -->
+    <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
+    <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
 </resources>
