--- a/res/layout/settings_homepage_container.xml
+++ b/res/layout/settings_homepage_container.xml
@@ -41,7 +41,8 @@
                 android:id="@+id/top_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:elevation="0dp">
+                app:elevation="0dp"
+                android:background="?android:attr/windowBackground">
 
                 <FrameLayout
                     android:id="@+id/settings_text_frame"
@@ -84,7 +85,7 @@
                 android:id="@+id/nav_view_divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/contextual_card_stroke_color"
+                android:background="?android:attr/windowBackground"
                 android:layout_below="@id/top_container"/>
 
             <FrameLayout
