--- a/res/layout/settings_homepage_container.xml
+++ b/res/layout/settings_homepage_container.xml
@@ -69,7 +69,8 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:layout_gravity="center_horizontal"
-                        android:text="@string/dashboard_title"/>  
+                        android:text="@string/dashboard_title"
+/>  
                 </FrameLayout>
 
                 <include layout="@layout/search_bar"/>
@@ -93,8 +94,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:animateLayoutChanges="true"
-                android:background="?android:attr/windowBackground"/>
-
+                android:background="?android:attr/windowBackground"
+                android:fontFamily="?android:string/config_headlineFontFamilyMedium"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
