--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -39,6 +39,14 @@
         settings:controller="com.android.settings.connecteddevice.TopLevelConnectedDevicesPreferenceController"/>
 
     <Preference
+        android:key="top_level_weeb_settings"
+        android:title="@string/weeb_settings_dash_title"
+        android:summary="@string/weeb_settings_summary"
+        android:icon="@drawable/ic_homepage_weeb"
+        android:order="-105"
+        android:fragment="com.weeb.settings.WeebSettings"/>
+
+    <Preference
         android:key="top_level_apps_and_notifs"
         android:title="@string/app_and_notification_dashboard_title"
         android:summary="@string/app_and_notification_dashboard_summary"
