--- a/res/drawable/ic_settings_weeb.xml
+++ b/res/drawable/ic_settings_weeb.xml
@@ -21,7 +21,7 @@
     android:viewportHeight="24">
 
     <path
-        android:fillColor="#FC6060"
+        android:fillColor="#ffffff"
         android:pathData="M19,7.5l1.2,0.7c0,0.1-0.2,0.2-0.3,0.2c-1,2.7-2.9,6.1-4.8,8.6c1.3,0.9,2.5,1.8,3.2,2.6l-1,1.4 c-1.7-1.9-5.4-4.4-8.5-5.9l0.9-1.2c1.3,0.6,2.7,1.4,4.1,2.2c1.6-2,3.1-4.8,4.1-7.1h-7.8c-1.3,2.6-3,5.1-4.9,7 c-0.3-0.3-1-0.7-1.4-0.9c3.3-3.1,5.8-8,7-12.2l2,0.6c0,0.2-0.2,0.2-0.5,0.2c-0.4,1.2-0.9,2.5-1.5,3.8h7.9L19,7.5z" />
 </vector>
 
